# alpha-vantage

./: .gitignore  README.md  api_keys_format.json  pyproject.toml
alpha_vantage/: __init__.py
alpha_vantage/common/: api.py  key_manager.py
alpha_vantage/pipelines/: __init__.py  fetch_indicators.py  total_extractor.py
alpha_vantage/pipelines/economy_level/: __init__.py  fetch_economic_indicators.py  fetch_federal_funds.py  fetch_treasury_yield.py
alpha_vantage/pipelines/ticker_level/: __init__.py  fetch_financial.py  fetch_sentiment.py  fetch_stock.py
alpha_vantage/src/: stock_etl.py
alpha_vantage/tables/: __init__.py
alpha_vantage/tables/economy_level/: __init__.py  indicators.py
alpha_vantage/tables/ticker_level/: __init__.py  financial.py  sentiment.py  stock.py
tests/pipelines/: test_fetch_financial.py  test_fetch_indicators.py
